@@ -138,7 +138,7 @@ public class GuiClockBlock extends QADGuiScreen {
 				NBTTagCompound commandData = new NBTTagCompound();
 				NBTTagCompound invokeData = new NBTTagCompound();
 				commandData.setTag("clockInvoke", invokeData);
-				invokeData.setString("type", "blockRegionTrigger");
+				invokeData.setString("type", "BlockTriggerInvoke");
 				invokeData.setIntArray("bounds", bounds);
 				
 				TaleCraft.instance.simpleNetworkWrapper.sendToServer(new StringNBTCommand(commandString, commandData));
