@@ -1,6 +1,6 @@
 {
     "parent": "block/cube_all",
     "textures": {
-        "all": "talecraft:blocks/util/redstoneTriggerOff"
+        "all": "talecraft:blocks/util/redstoneTrigger"
     }
 }
